# QGarage

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  OUTPUT_SPEC_IMPLEMENTATION.md  README.md  TOOLBOX_GUIDE.md  build-qgarage-package.ps1  install-qgarage-plugin.ps1  install-qhub-plugin.ps1  pyproject.toml
.github/workflows/: ci.yml  static-checks.yml  zizmor.yml
qgarage/: QHUB_APP_DEVELOPMENT.instructions.md  __init__.py  metadata.txt  plugin.py
qgarage/core/: app_executor.py  app_loader.py  app_registry.py  app_state.py  base_app.py  constants.py  logger.py  processing_provider.py  settings.py  subprocess_runner.py  uv_bridge.py
qgarage/processing/: __init__.py  algorithm_wrapper.py  parameter_mapper.py  processing_provider.py
qgarage/themes/: dark.qss  light.qss  theme_manager.py
qgarage/ui/: app_card_widget.py  app_host_widget.py  dashboard_dock.py  install_dialog.py  scaffold_dialog.py  settings_dialog.py  toolbox_card_widget.py
qgarage/workers/: download_worker.py  uninstall_worker.py
qhub/: QHUB_APP_DEVELOPMENT.instructions.md  __init__.py  metadata.txt  plugin.py
qhub/core/: app_loader.py  app_registry.py  app_state.py  base_app.py  constants.py  logger.py  settings.py  subprocess_runner.py  uv_bridge.py
qhub/themes/: dark.qss  light.qss  theme_manager.py
qhub/ui/: app_card_widget.py  app_host_widget.py  dashboard_dock.py  install_dialog.py  scaffold_dialog.py  settings_dialog.py
tests/: conftest.py  test_app_executor.py  test_app_state.py  test_app_validation.py  test_processing_integration.py  test_processing_provider.py  test_registry.py
(+18 files in other folders)
